--- a/x11-themes/xcursor-themes/ChangeLog
+++ b/x11-themes/xcursor-themes/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-themes/xcursor-themes
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-themes/cvs-repo/gentoo-x86/x11-themes/xcursor-themes/ChangeLog,v 1.16 2006/02/18 10:21:33 stefaan Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-themes/cvs-repo/gentoo-x86/x11-themes/xcursor-themes/ChangeLog,v 1.17 2006/06/30 06:34:23 spyderous Exp $
+
+  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
+  xcursor-themes-1.0.1.ebuild:
+  x86 stable.
 
   18 Feb 2006; Stefaan De Roeck <stefaan@gentoo.org>
   xcursor-themes-1.0.1.ebuild:
