--- a/x11-drivers/xf86-video-apm/ChangeLog
+++ b/x11-drivers/xf86-video-apm/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-drivers/xf86-video-apm
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-drivers/cvs-repo/gentoo-x86/x11-drivers/xf86-video-apm/ChangeLog,v 1.14 2006/06/05 21:27:46 flameeyes Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-drivers/cvs-repo/gentoo-x86/x11-drivers/xf86-video-apm/ChangeLog,v 1.15 2006/06/30 06:42:32 spyderous Exp $
+
+  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
+  xf86-video-apm-1.0.1.5.ebuild:
+  x86 stable.
 
   05 Jun 2006; Diego Pettenò <flameeyes@gentoo.org>
   xf86-video-apm-1.1.1.ebuild:
