--- a/x11-drivers/xf86-video-dummy/ChangeLog
+++ b/x11-drivers/xf86-video-dummy/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-drivers/xf86-video-dummy
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-drivers/cvs-repo/gentoo-x86/x11-drivers/xf86-video-dummy/ChangeLog,v 1.20 2006/06/21 02:29:10 geoman Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-drivers/cvs-repo/gentoo-x86/x11-drivers/xf86-video-dummy/ChangeLog,v 1.21 2006/06/30 06:57:04 spyderous Exp $
+
+  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
+  xf86-video-dummy-0.1.0.5.ebuild:
+  x86 stable.
 
   21 Jun 2006; Stephen P. Becker <geoman@gentoo.org>
   xf86-video-dummy-0.2.0.ebuild:
