--- a/x11-drivers/xf86-video-i810/ChangeLog
+++ b/x11-drivers/xf86-video-i810/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-drivers/xf86-video-i810
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-drivers/cvs-repo/gentoo-x86/x11-drivers/xf86-video-i810/Attic/ChangeLog,v 1.24 2006/06/17 16:55:59 spyderous Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-drivers/cvs-repo/gentoo-x86/x11-drivers/xf86-video-i810/Attic/ChangeLog,v 1.25 2006/06/30 06:45:30 spyderous Exp $
+
+  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
+  xf86-video-i810-1.4.1.3.ebuild:
+  x86 stable.
 
   17 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
   xf86-video-i810-1.6.0.ebuild:
