--- a/x11-drivers/xf86-video-mga/ChangeLog
+++ b/x11-drivers/xf86-video-mga/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-drivers/xf86-video-mga
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-drivers/cvs-repo/gentoo-x86/x11-drivers/xf86-video-mga/ChangeLog,v 1.21 2006/06/17 16:56:26 spyderous Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-drivers/cvs-repo/gentoo-x86/x11-drivers/xf86-video-mga/ChangeLog,v 1.22 2006/06/30 06:58:20 spyderous Exp $
+
+  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
+  xf86-video-mga-1.2.1.3.ebuild:
+  x86 stable.
 
   17 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
   xf86-video-mga-1.4.1.ebuild:
