--- a/x11-drivers/xf86-video-nv/ChangeLog
+++ b/x11-drivers/xf86-video-nv/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-drivers/xf86-video-nv
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-drivers/cvs-repo/gentoo-x86/x11-drivers/xf86-video-nv/ChangeLog,v 1.22 2006/06/05 21:22:25 flameeyes Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-drivers/cvs-repo/gentoo-x86/x11-drivers/xf86-video-nv/ChangeLog,v 1.23 2006/06/30 06:47:01 spyderous Exp $
+
+  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
+  xf86-video-nv-1.0.2.0.ebuild:
+  x86 stable.
 
   05 Jun 2006; Diego Pettenò <flameeyes@gentoo.org>
   xf86-video-nv-1.1.2.ebuild:
