--- a/x11-drivers/xf86-input-aiptek/ChangeLog
+++ b/x11-drivers/xf86-input-aiptek/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-drivers/xf86-input-aiptek
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-drivers/cvs-repo/gentoo-x86/x11-drivers/xf86-input-aiptek/ChangeLog,v 1.17 2006/04/14 17:30:40 joshuabaergen Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-drivers/cvs-repo/gentoo-x86/x11-drivers/xf86-input-aiptek/ChangeLog,v 1.18 2006/06/30 07:17:25 spyderous Exp $
+
+  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
+  xf86-input-aiptek-1.0.0.5.ebuild:
+  x86 stable.
 
 *xf86-input-aiptek-1.0.1 (14 Apr 2006)
 
