--- a/x11-apps/xhost/ChangeLog
+++ b/x11-apps/xhost/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-apps/xhost
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/xhost/ChangeLog,v 1.22 2006/04/15 06:30:14 joshuabaergen Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/xhost/ChangeLog,v 1.23 2006/06/30 07:24:33 spyderous Exp $
+
+  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>; xhost-1.0.1.ebuild:
+  x86 stable.
 
 *xhost-1.0.1 (15 Apr 2006)
 
