--- a/media-libs/musicbrainz/ChangeLog
+++ b/media-libs/musicbrainz/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/musicbrainz
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/musicbrainz/ChangeLog,v 1.53 2006/06/27 15:59:51 exg Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/musicbrainz/ChangeLog,v 1.54 2006/06/30 07:45:52 corsair Exp $
+
+  30 Jun 2006; Markus Rothe <corsair@gentoo.org> musicbrainz-2.1.2.ebuild:
+  Stable on ppc64
 
   27 Jun 2006; Emanuele Giaquinta <exg@gentoo.org> musicbrainz-2.1.2.ebuild:
   Stable on ppc.
