--- a/x11-proto/inputproto/ChangeLog
+++ b/x11-proto/inputproto/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-proto/inputproto
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-proto/cvs-repo/gentoo-x86/x11-proto/inputproto/ChangeLog,v 1.20 2006/06/30 04:48:31 spyderous Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-proto/cvs-repo/gentoo-x86/x11-proto/inputproto/ChangeLog,v 1.21 2006/06/30 08:39:25 corsair Exp $
+
+  30 Jun 2006; Markus Rothe <corsair@gentoo.org> inputproto-1.3.2.ebuild:
+  Stable on ppc64
 
   30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
   inputproto-1.3.2.ebuild:
