--- a/x11-proto/renderproto/ChangeLog
+++ b/x11-proto/renderproto/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-proto/renderproto
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-proto/cvs-repo/gentoo-x86/x11-proto/renderproto/ChangeLog,v 1.17 2006/04/28 00:19:43 marienz Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-proto/cvs-repo/gentoo-x86/x11-proto/renderproto/ChangeLog,v 1.18 2006/06/30 08:43:15 corsair Exp $
+
+  30 Jun 2006; Markus Rothe <corsair@gentoo.org> renderproto-0.9.2.ebuild:
+  Stable on ppc64
 
   28 Apr 2006; Marien Zwart <marienz@gentoo.org> Manifest:
   Fixing SHA256 digest, pass four
