--- a/x11-proto/xcmiscproto/ChangeLog
+++ b/x11-proto/xcmiscproto/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-proto/xcmiscproto
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-proto/cvs-repo/gentoo-x86/x11-proto/xcmiscproto/ChangeLog,v 1.19 2006/06/30 04:49:07 spyderous Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-proto/cvs-repo/gentoo-x86/x11-proto/xcmiscproto/ChangeLog,v 1.20 2006/06/30 08:47:08 corsair Exp $
+
+  30 Jun 2006; Markus Rothe <corsair@gentoo.org> xcmiscproto-1.1.2.ebuild:
+  Stable on ppc64
 
   30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
   xcmiscproto-1.1.2.ebuild:
