--- a/x11-proto/xf86dgaproto/ChangeLog
+++ b/x11-proto/xf86dgaproto/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-proto/xf86dgaproto
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-proto/cvs-repo/gentoo-x86/x11-proto/xf86dgaproto/ChangeLog,v 1.17 2006/06/30 05:42:45 spyderous Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-proto/cvs-repo/gentoo-x86/x11-proto/xf86dgaproto/ChangeLog,v 1.18 2006/06/30 08:49:26 corsair Exp $
+
+  30 Jun 2006; Markus Rothe <corsair@gentoo.org> xf86dgaproto-2.0.2.ebuild:
+  Stable on ppc64
 
   30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
   xf86dgaproto-2.0.2.ebuild:
