--- a/x11-proto/xf86vidmodeproto/ChangeLog
+++ b/x11-proto/xf86vidmodeproto/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-proto/xf86vidmodeproto
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-proto/cvs-repo/gentoo-x86/x11-proto/xf86vidmodeproto/ChangeLog,v 1.18 2006/06/30 05:30:40 spyderous Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-proto/cvs-repo/gentoo-x86/x11-proto/xf86vidmodeproto/ChangeLog,v 1.19 2006/06/30 08:52:32 corsair Exp $
+
+  30 Jun 2006; Markus Rothe <corsair@gentoo.org>
+  xf86vidmodeproto-2.2.2.ebuild:
+  Stable on ppc64
 
   30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
   xf86vidmodeproto-2.2.2.ebuild:
