--- a/x11-libs/libXcomposite/ChangeLog
+++ b/x11-libs/libXcomposite/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-libs/libXcomposite
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/libXcomposite/ChangeLog,v 1.22 2006/06/30 05:51:15 spyderous Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/libXcomposite/ChangeLog,v 1.23 2006/06/30 09:15:59 corsair Exp $
+
+  30 Jun 2006; Markus Rothe <corsair@gentoo.org> libXcomposite-0.3.ebuild:
+  Stable on ppc64
 
   30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
   libXcomposite-0.3.ebuild:
