--- a/x11-libs/libXt/ChangeLog
+++ b/x11-libs/libXt/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-libs/libXt
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/libXt/ChangeLog,v 1.27 2006/06/30 05:05:31 spyderous Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/libXt/ChangeLog,v 1.28 2006/06/30 09:08:53 corsair Exp $
+
+  30 Jun 2006; Markus Rothe <corsair@gentoo.org> libXt-1.0.2.ebuild:
+  Stable on ppc64
 
   30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>; libXt-1.0.2.ebuild:
   x86 stable.
