--- a/media-fonts/font-misc-misc/ChangeLog
+++ b/media-fonts/font-misc-misc/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-fonts/font-misc-misc
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-fonts/cvs-repo/gentoo-x86/media-fonts/font-misc-misc/ChangeLog,v 1.27 2006/06/30 05:14:30 spyderous Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-fonts/cvs-repo/gentoo-x86/media-fonts/font-misc-misc/ChangeLog,v 1.28 2006/06/30 09:49:02 corsair Exp $
+
+  30 Jun 2006; Markus Rothe <corsair@gentoo.org>
+  font-misc-misc-1.0.0.ebuild:
+  Stable on ppc64
 
   30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
   font-misc-misc-1.0.0.ebuild:
