--- a/x11-apps/xkbcomp/ChangeLog
+++ b/x11-apps/xkbcomp/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-apps/xkbcomp
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/xkbcomp/ChangeLog,v 1.25 2006/06/30 05:16:35 spyderous Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/xkbcomp/ChangeLog,v 1.26 2006/06/30 10:12:36 corsair Exp $
+
+  30 Jun 2006; Markus Rothe <corsair@gentoo.org> xkbcomp-1.0.2.ebuild:
+  Stable on ppc64
 
   30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>; xkbcomp-1.0.2.ebuild:
   x86 stable.
