--- a/x11-drivers/xf86-input-keyboard/ChangeLog
+++ b/x11-drivers/xf86-input-keyboard/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-drivers/xf86-input-keyboard
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-drivers/cvs-repo/gentoo-x86/x11-drivers/xf86-input-keyboard/ChangeLog,v 1.20 2006/06/30 07:09:07 spyderous Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-drivers/cvs-repo/gentoo-x86/x11-drivers/xf86-input-keyboard/ChangeLog,v 1.21 2006/06/30 10:39:46 corsair Exp $
+
+  30 Jun 2006; Markus Rothe <corsair@gentoo.org>
+  xf86-input-keyboard-1.0.1.3.ebuild:
+  Stable on ppc64
 
   30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
   xf86-input-keyboard-1.0.1.3.ebuild:
