--- a/x11-drivers/xf86-video-vesa/ChangeLog
+++ b/x11-drivers/xf86-video-vesa/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-drivers/xf86-video-vesa
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-drivers/cvs-repo/gentoo-x86/x11-drivers/xf86-video-vesa/ChangeLog,v 1.19 2006/06/30 06:51:13 spyderous Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-drivers/cvs-repo/gentoo-x86/x11-drivers/xf86-video-vesa/ChangeLog,v 1.20 2006/06/30 10:43:43 corsair Exp $
+
+  30 Jun 2006; Markus Rothe <corsair@gentoo.org>
+  xf86-video-vesa-1.0.1.3.ebuild:
+  Stable on ppc64
 
   30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
   xf86-video-vesa-1.0.1.3.ebuild:
