--- a/x11-misc/xorg-cf-files/ChangeLog
+++ b/x11-misc/xorg-cf-files/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-misc/xorg-cf-files
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/xorg-cf-files/ChangeLog,v 1.20 2006/06/30 06:28:59 spyderous Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/xorg-cf-files/ChangeLog,v 1.21 2006/06/30 11:07:43 corsair Exp $
+
+  30 Jun 2006; Markus Rothe <corsair@gentoo.org> xorg-cf-files-1.0.2.ebuild:
+  Stable on ppc64
 
   30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
   xorg-cf-files-1.0.2.ebuild:
