--- a/dev-util/svnmailer/ChangeLog
+++ b/dev-util/svnmailer/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-util/svnmailer
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/svnmailer/Attic/ChangeLog,v 1.1 2006/06/30 09:21:20 sebastian Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/svnmailer/Attic/ChangeLog,v 1.2 2006/06/30 11:25:36 sebastian Exp $
+
+  30 Jun 2006; Sebastian Bergmann <sebastian@gentoo.org>
+  svnmailer-1.0.8.ebuild:
+  Mark ~amd64.
 
 *svnmailer-1.0.8 (30 Jun 2006)
 
