--- a/sys-boot/silo/ChangeLog
+++ b/sys-boot/silo/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-boot/silo
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-boot/cvs-repo/gentoo-x86/sys-boot/silo/ChangeLog,v 1.31 2006/06/23 18:50:34 gustavoz Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-boot/cvs-repo/gentoo-x86/sys-boot/silo/ChangeLog,v 1.32 2006/06/30 13:47:28 gustavoz Exp $
+
+  30 Jun 2006; Gustavo Zacarias <gustavoz@gentoo.org> silo-1.4.13.ebuild:
+  Stable on sparc
 
 *silo-1.4.13 (23 Jun 2006)
 
