--- a/x11-apps/iceauth/ChangeLog
+++ b/x11-apps/iceauth/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-apps/iceauth
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/iceauth/ChangeLog,v 1.20 2006/06/30 09:53:53 corsair Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/iceauth/ChangeLog,v 1.21 2006/06/30 14:50:39 wolf31o2 Exp $
+
+  30 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org> iceauth-1.0.1.ebuild:
+  Stable on amd64.
 
   30 Jun 2006; Markus Rothe <corsair@gentoo.org> iceauth-1.0.1.ebuild:
   Stable on ppc64
