--- a/x11-apps/xrandr/ChangeLog
+++ b/x11-apps/xrandr/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-apps/xrandr
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/xrandr/ChangeLog,v 1.20 2006/06/30 10:16:05 corsair Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/xrandr/ChangeLog,v 1.21 2006/06/30 15:00:15 wolf31o2 Exp $
+
+  30 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org> xrandr-1.0.2.ebuild:
+  Stable on amd64.
 
   30 Jun 2006; Markus Rothe <corsair@gentoo.org> xrandr-1.0.2.ebuild:
   Stable on ppc64
