--- a/net-im/gaim/ChangeLog
+++ b/net-im/gaim/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-im/gaim
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-im/cvs-repo/gentoo-x86/net-im/gaim/Attic/ChangeLog,v 1.393 2006/06/30 12:19:35 gothgirl Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-im/cvs-repo/gentoo-x86/net-im/gaim/Attic/ChangeLog,v 1.394 2006/06/30 15:51:09 gothgirl Exp $
+
+  30 Jun 2006; gothgirl <gothgirl@gentoo.org> gaim-2.0.0_beta3-r1.ebuild:
+  added gadu gadu protocol support
 
   30 Jun 2006; gothgirl <gothgirl@gentoo.org> gaim-1.5.0.ebuild,
   gaim-2.0.0_beta3-r1.ebuild:
