--- a/x11-libs/libFS/ChangeLog
+++ b/x11-libs/libFS/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-libs/libFS
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/libFS/ChangeLog,v 1.22 2006/06/30 08:57:43 corsair Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/libFS/ChangeLog,v 1.23 2006/06/30 15:35:35 wolf31o2 Exp $
+
+  30 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org> libFS-1.0.0.ebuild:
+  Stable on amd64.
 
   30 Jun 2006; Markus Rothe <corsair@gentoo.org> libFS-1.0.0.ebuild:
   Stable on ppc64
