--- a/x11-misc/makedepend/ChangeLog
+++ b/x11-misc/makedepend/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-misc/makedepend
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/makedepend/ChangeLog,v 1.21 2006/06/30 09:51:27 corsair Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/makedepend/ChangeLog,v 1.22 2006/06/30 15:58:50 wolf31o2 Exp $
+
+  30 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org>
+  makedepend-1.0.0.ebuild:
+  Stable on amd64.
 
   30 Jun 2006; Markus Rothe <corsair@gentoo.org> makedepend-1.0.0.ebuild:
   Stable on ppc64
