--- a/x11-proto/printproto/ChangeLog
+++ b/x11-proto/printproto/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-proto/printproto
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-proto/cvs-repo/gentoo-x86/x11-proto/printproto/ChangeLog,v 1.20 2006/06/30 08:40:58 corsair Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-proto/cvs-repo/gentoo-x86/x11-proto/printproto/ChangeLog,v 1.21 2006/06/30 16:06:43 wolf31o2 Exp $
+
+  30 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org>
+  printproto-1.0.3.ebuild:
+  Stable on amd64.
 
   30 Jun 2006; Markus Rothe <corsair@gentoo.org> printproto-1.0.3.ebuild:
   Stable on ppc64
