--- a/x11-proto/xextproto/ChangeLog
+++ b/x11-proto/xextproto/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-proto/xextproto
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-proto/cvs-repo/gentoo-x86/x11-proto/xextproto/ChangeLog,v 1.19 2006/06/30 08:47:54 corsair Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-proto/cvs-repo/gentoo-x86/x11-proto/xextproto/ChangeLog,v 1.20 2006/06/30 16:11:07 wolf31o2 Exp $
+
+  30 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org>
+  xextproto-7.0.2.ebuild:
+  Stable on amd64.
 
   30 Jun 2006; Markus Rothe <corsair@gentoo.org> xextproto-7.0.2.ebuild:
   Stable on ppc64
