--- a/x11-proto/kbproto/ChangeLog
+++ b/x11-proto/kbproto/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-proto/kbproto
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-proto/cvs-repo/gentoo-x86/x11-proto/kbproto/ChangeLog,v 1.22 2006/06/30 16:06:14 wolf31o2 Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-proto/cvs-repo/gentoo-x86/x11-proto/kbproto/ChangeLog,v 1.23 2006/06/30 18:29:46 marienz Exp $
+
+  30 Jun 2006; Marien Zwart <marienz@gentoo.org> files/digest-kbproto-1.0.2,
+  Manifest:
+  Fix digest.
 
   30 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org> kbproto-1.0.2.ebuild:
   Stable on amd64.
