--- a/x11-proto/xf86miscproto/ChangeLog
+++ b/x11-proto/xf86miscproto/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-proto/xf86miscproto
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-proto/cvs-repo/gentoo-x86/x11-proto/xf86miscproto/ChangeLog,v 1.20 2006/06/30 16:13:03 wolf31o2 Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-proto/cvs-repo/gentoo-x86/x11-proto/xf86miscproto/ChangeLog,v 1.21 2006/06/30 18:50:25 marienz Exp $
+
+  30 Jun 2006; Marien Zwart <marienz@gentoo.org>
+  files/digest-xf86miscproto-0.9.2, Manifest:
+  Fix digest.
 
   30 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org>
   xf86miscproto-0.9.2.ebuild:
