--- a/x11-apps/luit/ChangeLog
+++ b/x11-apps/luit/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-apps/luit
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/luit/ChangeLog,v 1.14 2006/06/30 19:10:25 spyderous Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/luit/ChangeLog,v 1.15 2006/06/30 20:01:49 corsair Exp $
+
+  30 Jun 2006; Markus Rothe <corsair@gentoo.org> luit-1.0.1.ebuild:
+  Stable on ppc64
 
   30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>; luit-1.0.1.ebuild:
   (#138615) Stable on x86/amd64, xterm needs it on USE=unicode.
