--- a/x11-drivers/xf86-input-citron/ChangeLog
+++ b/x11-drivers/xf86-input-citron/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-drivers/xf86-input-citron
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-drivers/cvs-repo/gentoo-x86/x11-drivers/xf86-input-citron/ChangeLog,v 1.22 2006/06/30 10:54:00 corsair Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-drivers/cvs-repo/gentoo-x86/x11-drivers/xf86-input-citron/ChangeLog,v 1.23 2006/06/30 20:26:54 corsair Exp $
+
+  30 Jun 2006; Markus Rothe <corsair@gentoo.org>
+  xf86-input-citron-2.2.0.ebuild:
+  Stable on ppc64
 
   30 Jun 2006; Markus Rothe <corsair@gentoo.org>
   xf86-input-citron-2.1.5.ebuild:
