--- a/x11-apps/mesa-progs/ChangeLog
+++ b/x11-apps/mesa-progs/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-apps/mesa-progs
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/mesa-progs/ChangeLog,v 1.17 2006/06/30 14:51:11 wolf31o2 Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/mesa-progs/ChangeLog,v 1.18 2006/06/30 20:40:26 corsair Exp $
+
+  30 Jun 2006; Markus Rothe <corsair@gentoo.org> mesa-progs-6.5.ebuild:
+  Stable on ppc64
 
   30 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org>
   mesa-progs-6.4.2.ebuild:
