--- a/gnome-extra/gnome-screensaver/ChangeLog
+++ b/gnome-extra/gnome-screensaver/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for gnome-extra/gnome-screensaver
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/gnome-extra/cvs-repo/gentoo-x86/gnome-extra/gnome-screensaver/ChangeLog,v 1.5 2006/05/16 08:12:20 compnerd Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/gnome-extra/cvs-repo/gentoo-x86/gnome-extra/gnome-screensaver/ChangeLog,v 1.6 2006/06/30 21:31:51 dang Exp $
+
+*gnome-screensaver-2.14.2 (30 Jun 2006)
+
+  30 Jun 2006; <dang@gentoo.org> +gnome-screensaver-2.14.2.ebuild:
+  Bump for 2.14.2
 
   16 May 2006; Saleem Abdulrasool <compnerd@gentoo.org>
   gnome-screensaver-2.14.1.ebuild:
