--- a/x11-misc/util-macros/ChangeLog
+++ b/x11-misc/util-macros/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-misc/util-macros
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/util-macros/ChangeLog,v 1.27 2006/06/30 15:59:20 wolf31o2 Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/util-macros/ChangeLog,v 1.28 2006/06/30 22:08:55 spyderous Exp $
+
+  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
+  util-macros-1.0.2.ebuild:
+  ppc/sparc/mips/alpha stable
 
   30 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org>
   util-macros-1.0.2.ebuild:
