--- a/app-admin/eselect-opengl/ChangeLog
+++ b/app-admin/eselect-opengl/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-admin/eselect-opengl
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/eselect-opengl/ChangeLog,v 1.14 2006/04/27 09:10:06 antarus Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/eselect-opengl/ChangeLog,v 1.15 2006/06/30 22:25:01 spyderous Exp $
+
+  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
+  eselect-opengl-1.0.3.ebuild:
+  mips stable.
 
   27 Apr 2006; Alec Warner <antarus@gentoo.org>
   files/digest-eselect-opengl-1.0.3, Manifest:
