--- a/x11-proto/xcmiscproto/ChangeLog
+++ b/x11-proto/xcmiscproto/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-proto/xcmiscproto
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-proto/cvs-repo/gentoo-x86/x11-proto/xcmiscproto/ChangeLog,v 1.22 2006/06/30 18:37:22 marienz Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-proto/cvs-repo/gentoo-x86/x11-proto/xcmiscproto/ChangeLog,v 1.23 2006/06/30 22:19:15 spyderous Exp $
+
+  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
+  xcmiscproto-1.1.2.ebuild:
+  ppc/sparc/mips/alpha stable
 
   30 Jun 2006; Marien Zwart <marienz@gentoo.org>
   files/digest-xcmiscproto-1.1.2, Manifest:
