--- a/x11-proto/xf86rushproto/ChangeLog
+++ b/x11-proto/xf86rushproto/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-proto/xf86rushproto
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-proto/cvs-repo/gentoo-x86/x11-proto/xf86rushproto/ChangeLog,v 1.21 2006/06/30 19:13:10 marienz Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-proto/cvs-repo/gentoo-x86/x11-proto/xf86rushproto/ChangeLog,v 1.22 2006/06/30 22:21:20 spyderous Exp $
+
+  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
+  xf86rushproto-1.1.2.ebuild:
+  ppc/sparc/mips/alpha stable
 
   30 Jun 2006; Marien Zwart <marienz@gentoo.org>
   files/digest-xf86rushproto-1.1.2, Manifest:
